Tests/Error/Multilingual/.build/throwerror.pr
{
  "name": "ThrowError",
  "description": "Throws an intentional error with the provided message.",
  "comment": null,
  "steps": [
    {
      "index": 0,
      "text": "throw \u0022intentional error\u0022",
      "lineNumber": 2,
      "indent": 0,
      "comment": null,
      "actions": [
        {
          "module": "error",
          "action": "throw",
          "parameters": [
            {
              "name": "Message",
              "value": "intentional error",
              "type": "string"
            }
          ],
          "defaults": null
        }
      ],
      "intent": null,
      "onError": null,
      "cache": null,
      "timeout": null,
      "waitForExecution": true
    }
  ],
  "goals": [],
  "visibility": 1,
  "path": "/Tests/Error/Multilingual/ThrowError.goal",
  "prPath": "/Tests/Error/Multilingual/.build/throwerror.pr",
  "hash": "227b802a61ecde7ab3c5b00a247f6e6ba6695f0b2db6325dd8b538a69a2642c6",
  "builderVersion": null,
  "isSetup": false,
  "isEvent": false,
  "isSystem": false,
  "isTest": false,
  "inputParameters": null
}